attempt to simplify css and fix spacing of columns

--- a/Resources/Public/Styles/default.css
+++ b/Resources/Public/Styles/default.css
@@ -18,14 +18,6 @@ Contents:
 
 /* -------------------------- CSS Variables */
 
-:root {
-    --theme-color: #0b0c0d;
-    --tint-color: #cc4f14;
-    --accent-color: #e6510b;
-    --accent-alt-color: #272a2e;
-    --text-color-light: #0b0c0d;
-    --text-color-dark: #f7f7f7
-}
 
 /* -------------------------- Color Applicators */
 
