--- a/Resources/Public/Styles/navigation.css
+++ b/Resources/Public/Styles/navigation.css
@@ -7,14 +7,6 @@ Contents:
     -
 -------------------------- */
 
-:root {
-    --theme-color: #0b0c0d;
-    --tint-color: #cc4f14;
-    --accent-color: #e6510b;
-    --accent-alt-color: #272a2e;
-    --text-color-light: #0b0c0d;
-    --text-color-dark: #f7f7f7
-}
 
 /* -------------------------- Neos Navigation Elements */
 
