--- a/Resources/Public/Styles/skyLaunchNav.css
+++ b/Resources/Public/Styles/skyLaunchNav.css
@@ -1,11 +1,4 @@
-:root {
-    --theme-color: #0b0c0d;
-    --tint-color: #cc4f14;
-    --accent-color: #e6510b;
-    --accent-alt-color: #272a2e;
-    --text-color-light: #0b0c0d;
-    --text-color-dark: #f7f7f7
-}
+
 
 /* The Overlay (background) */
 .overlay {
